--- a/src/modules/Program/components/Dashboard/Settings.css
+++ b/src/modules/Program/components/Dashboard/Settings.css
@@ -10,6 +10,7 @@ input[type="number"] {
 
 .settings-container {
   margin-top: 5.4rem;
+  min-height: 100vh;
 }
 
 .settings-container > .row {
